Seperate Credential Providers and Servlet Autethenticaters into sub-pages and fix accordion jumping (#399)
* Seperate Credential Providers and Servlet Autethenticaters into sub-pages and fix accordion jumping

* Update frank-doc-frontend/src/app/views/servlet-authenticators/servlet-authenticators.component.ts

Oeps copy-paste


* Fix tests

* Add extra documentation

* Remove extra margin for element title

---------

--- a/frank-doc-frontend/src/app/views/details/details-element/details-element.component.scss
+++ b/frank-doc-frontend/src/app/views/details/details-element/details-element.component.scss
@@ -1,4 +1,5 @@
 h2 {
+  margin: 0;
   color: var(--ff-color-dark);
   font-size: 50px;
   font-weight: 700;
