--- a/frank-doc-frontend/src/app/views/details/details-search/details-search.component.scss
+++ b/frank-doc-frontend/src/app/views/details/details-search/details-search.component.scss
@@ -22,33 +22,4 @@ ff-search {
     font-weight: 600;
     vertical-align: middle;
   }
-
-  ul {
-    padding: 0;
-    list-style: none;
-
-    li {
-      padding: 3px 0 3px 16px;
-      border-left: 1px solid var(--ff-color-light-gray);
-      color: var(--ff-color-dark-gray);
-      font-size: 16px;
-      font-weight: 400;
-      text-transform: capitalize;
-
-      @media (min-width: 1600px) {
-        padding: 3px 0 3px 25px;
-      }
-
-      &.active {
-        border-left: 1px solid var(--ff-color-dark);
-        color: var(--ff-color-dark);
-        font-weight: 600;
-      }
-    }
-
-    a {
-      color: inherit;
-      text-decoration: none;
-    }
-  }
 }
