--- a/frank-doc-frontend/src/styles.scss
+++ b/frank-doc-frontend/src/styles.scss
@@ -13,8 +13,12 @@
 }
 
 * {
-  margin: 0;
   box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
   font-family: Inter, sans-serif;
 }
 
@@ -42,6 +46,39 @@ app-root {
   }
 }
 
+.sidenav, .search-related, .search-results {
+  ul {
+    margin-top: 0;
+    padding: 0;
+    list-style: none;
+
+    li {
+      padding: 3px 0 3px 16px;
+      border-left: 1px solid var(--ff-color-light-gray);
+      color: var(--ff-color-dark-gray);
+      font-size: 16px;
+      font-weight: 400;
+      text-transform: capitalize;
+      word-break: break-all;
+
+      @media (min-width: 1600px) {
+        padding: 3px 0 3px 25px;
+      }
+
+      &.active {
+        border-left: 1px solid var(--ff-color-dark);
+        color: var(--ff-color-dark);
+        font-weight: 600;
+      }
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+  }
+}
+
 .sidenav {
   padding: 20px 20px 20px 0;
   border-image: linear-gradient(180deg, #fff 0%, var(--ff-color-light-gray) 50px) 1;
@@ -60,22 +97,15 @@ app-root {
     font-weight: 600;
   }
 
-  ul {
-    padding-left: 13px;
-    list-style: none;
-    margin-bottom: 25px;
-
-    li {
-      margin: 5px 0;
-      color: var(--ff-color-dark);
-      font-size: 16px;
-      font-weight: 500;
-      word-break: break-all;
-    }
+  .title {
+    color: var(--ff-color-dark);
+    font-size: 16px;
+    font-weight: 600;
   }
 }
 
 h2.page-title {
+  margin-top: 0;
   margin-bottom: 10px;
   color: var(--ff-color-dark);
   font-size: 50px;
@@ -140,11 +170,6 @@ h3.sub-title {
   code {
     font-family: 'DM Mono', monospace;
   }
-}
-
-.javadoc p,
-.explanation > span p {
-  margin: 1em 0;
 }
 
 .collapsed {
